--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-  <link href="assets/global.css" rel="stylesheet">
+  <link href="global.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
 </head>
 <body>
   <header class="w700">
     <h1>ITMD 4/541 - Lab 2</h1>
-    <h2>Your Name Here</h2>
+    <h2>Prishita Meshram</h2>
     <p>In this lab follow the directions in each part to write CCS rules to match the example image. <strong>DO NOT</strong> edit this HTML file in any way except to add your name in the H2 in the Header section above this text. <strong>DO NOT</strong> edit the global.css file in any way. You will write all your CSS in the proper sections in the styles.css file only.</p>
     <p>Create a Lab2 folder in your class GitHub repository and place all the files for this lab in that folder, including the assets folder with images. Once you publish this lab to GitHub Pages, submit to the blackboard assignment a link to this main lab page in GitHub Pages and your GitHub repository code.</p>
   </header>
@@ -37,7 +37,7 @@
   <section id="flex-section2" class="w700">
     <h2>CSS Flexbox - Part 2</h2>
     <p>In this section you will turn an unordered list of this items into three equal width columns and reorder the columns using only CSS Flexbox. Finish the CSS in flexbox part 2 of the styles.css file so that it matches the example below.</p>
-    <img src="assets/flex-p2.png" alt="flexbox part 2 example" width="700">
+    <img src="flex-p2.png" alt="flexbox part 2 example" width="700">
     <p>Each column should take up equal space, do not set a width, use flexbox properties to do this. The columns should be reorder as described, do not edit the HTML to reorder. You should be able to do this by only adding rules to the selectors already in the CSS file.</p>
     <div class="box">
       <nav>
@@ -52,11 +52,11 @@
   <section id="flex-section3" class="w700">
     <h2>CSS Flexbox - Part 3</h2>
     <p>In this section you need to do two things. First, you need to center the card item both horzontally and vertically in the box. Next, you need to turn the list of words into something that looks like tags below the image. Finish the CSS in flexbox part 3 of the styles.css file so that it matches the example below.</p>
-    <img src="assets/flex-p3.png" alt="flexbox part 3 example" width="700">
+    <img src="flex-p3.png" alt="flexbox part 3 example" width="700">
     <p>You should be able to do this by only adding rules to the selectors already in the CSS file.</p>
     <div class="box h400">
       <div class="card">
-        <img src="assets/clouds.jpg" alt="clouds" width="200">
+        <img src="clouds.jpg" alt="clouds" width="200">
         <div class="tags">
           <ul>
             <li>Clouds</li>
@@ -72,7 +72,7 @@
   <section id="grid-section1" class="w700">
     <h2>CSS Grid - Part 1</h2>
     <p>In this section you need to create a grid where the six child boxes auto place. Finish the CSS in grid part 1 of the styles.css file so that it matches the example below.</p>
-    <img src="assets/grid-p1.png" alt="grid part 1 example" width="700">
+    <img src="grid-p1.png" alt="grid part 1 example" width="700">
     <p>The grid should have 4 columns that divide the space evenly and a 20 pixel gap between the columns and rows. The rows should auto-generate and be 100px tall. You should be able to do this by only adding rules to the selectors already in the CSS file.</p>
     <div class="box">
       <div class="grid">
@@ -89,7 +89,7 @@
   <section id="grid-section2" class="w700">
     <h2>CSS Grid - Part 2</h2>
     <p>In this section the 3 column and 3 row grid is already defined. You need to position the two boxes in the grid the way they appear in the example. Finish the CSS in grid part 2 of the styles.css file so that it matches the example below.</p>
-    <img src="assets/grid-p2.png" alt="grid part 2 example" width="700">
+    <img src="grid-p2.png" alt="grid part 2 example" width="700">
     <p>Make sure the red box and the blue box are positioned in the grid as shown. The blue box should be over top the red box. You should be able to do this by only adding rules to the selectors already in the CSS file.</p>
     <div class="box h400">
       <div class="grid">
@@ -102,7 +102,7 @@
   <section id="grid-section3" class="w700">
     <h2>CSS Grid - Part 3</h2>
     <p>In this section you will turn the four grey boxes into a grid that resembles a typical web page layout. Finish the CSS in grid part 3 of the styles.css file so that it matches the example below.</p>
-    <img src="assets/grid-p3.png" alt="grid part 3 example" width="700">
+    <img src="grid-p3.png" alt="grid part 3 example" width="700">
     <p>The grid should be a 2 column grid with 3 rows. The first column should be twice the width of the second column, use fractional widths not fixed with units. The first and last row should be 100px tall and the middle row should be 300px tall. The first and last row should span both columns. There should be a 10px gap between all rows and columns. Pay attention to the order/position of the boxes on the grid. You should be able to do this by only adding rules to the selectors already in the CSS file.</p>
     <div class="box">
       <div class="grid">
