--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section id="flex-section1" class="w700">
     <h2>CSS Flexbox - Part 1</h2>
     <p>In this section you will try to create a horzontal navigation bar. Finish the CSS in flexbox part 1 in the styles.css file so that the nav bar matches the one below.</p>
-    <img src="assets/flex-p1.png" alt="flexbox part 1 example" width="700">
+    <img src="flex-p1.png" alt="flexbox part 1 example" width="700">
     <p>The buttons should be in a row and have an equal amount of space inbetween each and at the beginning and end. You should be able to do this by only adding rules to the selector already in the CSS file.</p>
     <div class="box">
       <nav>
